--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-hello
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+	<title>cactoid</title>
+	<style type="text/css" media="screen">
+		html { min-height: 100%; height: auto; }
+		body { background: #e5d9c0 url(x.jpg) repeat-x; background-position: 50% 50%; }
+		del,div,ins { position: absolute; top: 50%; left: 50%; display: block; }
+		div { width: 350px; height: 177px; background: url(glory.gif); margin-left: -175px; margin-top: -169px; }
+		del { width: 110px; height: 36px; background: url(ctd.gif); margin-left: 245px; margin-top: 100px; }
+		ins { width: 114px; height: 80px; background: url(now.gif); margin-left: -55px; margin-top: -78px; }
+		* html del { margin-top: 101px; }
+		*+html del { margin-top: 100px; }
+		@media all and (min-width:0px) {
+			body:not(:root:root) del { margin-top: 101px; }
+		}
+	</style>
+</head>
+<body>
+
+<div /><ins /><del />
+
+</body>
+</html>
