--- a/d/index.html
+++ b/d/index.html
@@ -1,1 +1,28 @@
 
+<!doctype html> 
+<html>
+<head>
+	<title></title>
+	<style type="text/css" media="screen">
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 97vh;
+        }
+	</style>
+</head>
+<body>
+    <a href="mailto:domain@prado.se">domain@prado.se</a>
+
+    <script>
+        var a = document.querySelector('a');
+        a.href = a.href + 
+            '?subject=' + 
+            encodeURIComponent('I\'m interested in purchasing ' + 
+            location.pathname.split('d/')[1] + 
+            ".\nI promise I am not a spammer and I won't lowball the price."
+        );
+    </script>
+</body>
+</html>
