--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		del,div,ins { position: absolute; top: 50%; left: 50%; display: block; }
 		div { width: 350px; height: 177px; background: url(glory.gif); margin-left: -175px; margin-top: -169px; }
 		del { width: 110px; height: 36px; background: url(ctd.gif); margin-left: 245px; margin-top: 100px; }
-		ins { width: 114px; height: 80px; background: url(now.gif); margin-left: -55px; margin-top: -78px; }
 		* html del { margin-top: 101px; }
 		*+html del { margin-top: 100px; }
 		@media all and (min-width:0px) {
@@ -19,7 +18,7 @@
 </head>
 <body>
 
-<div /><ins /><del />
+<div /><del />
 
 </body>
 </html>
